package Exceptions;

public class CloseCashierException {



}
