package Exceptions;

public class OptionNotValidException extends Throwable {
	public OptionNotValidException() {
		System.out.println("La opción escogida no es válida");
	}



}
